@@ -80,6 +80,9 @@ having unsermake support disabled), and save the generated file to disk.
 Also, the qt-copy module has better default configure options.</li>
 <li>The valgrind module has the same hack applied to it as kdebindings, so now
 it builds successfully for me.</li>
+<li>Nothing super-impressive, but the building module line now lists what
+module number you're on so you have something to look forward to.  Based
+loosely on a suggestion by David Saxton.</li>
 </ul>
 
 <p><b>2004-Aug-03:</b> v0.81<br/>
@@ -837,7 +840,7 @@ href="#options">.kdecvs-buildrc options</a>.
 <div align="center" class="thankyou">
 <font size="-1"><a href="http://www.cvsup.org/">CVSup</a> is a registered trademark of John D. Polstra.
 <br/>
-Last modified: Thu Aug 12 22:17:58 2004</font>
+Last modified: Thu Aug 12 22:46:40 2004</font>
 </div>
 </body>
 </html>
