@@ -5,6 +5,8 @@ Version history: 0.82
  * kdecvs-pywizard improvements.
  * Add hack to make valgrind build.  Unlike kdebindings, this one actually
    completes now.
+ * Show how many modules have been built out of the total number of modules,
+   based loosely on a suggestion by David Saxton.
 
 Version history: 0.81
  * Fix use-qt-builddir-hack to work on the second and subsequent runs.
